# micrograd-ports

./: .gitignore  LICENSE  README.md  micrograd.ipynb
cpp-engine/: CMakeLists.txt  engine.cpp  engine.h  main.cpp
cpp-engine/model/: layer.cpp  layer.h  mlp.cpp  mlp.h  neuron.cpp  neuron.h
